# smartnoise-core

./: .gitignore  .rustc_info.json  .rustdoc_fingerprint.json  .travis-build.yml  .travis.yml  .travis.yml-01  .travis.yml-02  .travis.yml-with-python  .xtravis.yml-03  CMakeLists.txt  Cargo.toml  History.md  README.md  appveyor.yml  build_docs.sh  contributing.md  dependencies.sh  generate_docs.sh  index.html  orig-README.md  troubleshooting.md
base/: CMakeLists.txt  conanfile.txt
base-tests/: CMakeLists.txt
base-tests/src/: tests.cpp
base/include/differential_privacy/: aggregations.hpp  base.hpp  components.hpp  graph.hpp  mechanisms.hpp  pipelines.hpp  privacy_definition.hpp  transforms.hpp
base/src/: aggregations.cpp  base.cpp  components.cpp  graph.cpp  mechanisms.cpp  pipelines.cpp  transforms.cpp
bindings-R/: .gitignore  CMakeLists.txt  CMakeListsx.txt  CONFIGURE  CONFIGURE.WIN  DESCRIPTION  NAMESPACE  README.md  app.R  install.bat  install.sh
bindings-R/R/: api.R  app.R  base.R  value.R
bindings-R/man/: burdock.Rd
bindings-R/src/: Makefile.win  Makevars  Makevars.win  bindings.cpp  wrapper.c
bindings-R/tests/: testthat.R
bindings-R/tests/testthat/: test-packaging.R
bindings-python/: .buildinfo  .gitignore  CMakeLists.txt  README.md  app.py  code_generation.py  conanfile.txt  debug.sh  debug_mac.sh  debug_ubuntu.sh  differential_privacy.py  genindex.html  hello.py  index.html  install.sh  objects.inv  reformat_component_json.py  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  whitenoise.api.html  whitenoise.base.html  whitenoise.html  whitenoise.value.html
bindings-python/.doctrees/: environment.pickle  index.doctree  whitenoise.api.doctree  whitenoise.base.doctree  whitenoise.doctree  whitenoise.value.doctree
bindings-python/_sources/: index.rst.txt  whitenoise.api.rst.txt  whitenoise.base.rst.txt  whitenoise.rst.txt  whitenoise.value.rst.txt
bindings-python/burdock/: __init__.py  base.py  wrapper.py
bindings-python/notebooks/: data_analysis_tutorial.ipynb  getting_statistics.ipynb  privacy_vs_accuracy.ipynb  utility.ipynb
bindings-python/opendp/whitenoise/: __init__.py  api.py  base.py  value.py
bindings-python/src/: bindings.cpp
bindings-python/templates/: conf.py_t  master_doc.rst_t
bindings-python/tests/: test_base.py  test_components.py  test_insertion.py  test_validator_properties.py
bindings-python/whitenoise/: __init__.py  api.py  base.py  value.py  wrapper.py
bindings-python/yarrow/: __init__.py  _native_runtime.py  _native_runtime__ffi.py  _native_validator.py  _native_validator__ffi.py  base.py  components.py  wrapper.py
bindings-python/yarrow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ffi-rust/: Cargo.toml  README.md  api.h
ffi-rust/src/: direct_api.rs  lib.rs  utilities.rs
runtime-eigen/: CMakeLists.txt  README.md  conanfile.txt
runtime-eigen/include/differential_privacy_runtime_eigen/: api.hpp  base.hpp  components.hpp  utilities.hpp
runtime-eigen/src/: api.cpp  base.cpp  components.cpp  utilities.cpp
runtime-rust/: Cargo.toml  README.md  api.h  build.rs  cbindgen.toml
runtime-rust/src/: algorithms.rs  base.rs  components.rs  ffi.rs  lib.rs  main.rs  utilities.rs
runtime-rust/src/components/: bin.rs  cast.rs  clamp.rs  clustering.rs  column_bind.rs  count.rs  covariance.rs  dataframe.rs  digitize.rs  dp_gumbel_median.rs  filter.rs  histogram.rs  impute.rs  index.rs  kth_raw_sample_moment.rs  least_squares.rs  linreg_error.rs  linreg_noisy_stats.rs  linreg_noisystats.rs  linreg_theilsen.rs  map.rs  materialize.rs  maximum.rs  mean.rs  mechanisms.rs  median.rs  merge.rs  minimum.rs  mod.rs  partition.rs  quantile.rs  raw_moment.rs  rename.rs  reshape.rs  resize.rs  row_max.rs  row_min.rs  sgd.rs  sum.rs  theil_sen.rs  (+5 more)
runtime-rust/src/utilities/: aggregations.rs  analytic_gaussian.rs  array.rs  mechanisms.rs  mod.rs  noise.rs  shuffling.rs  snapping.rs  transformations.rs  utilities.rs
tests/: CMakeLists.txt  conanfile.txt
tests/include/tests/: main.hpp
tests/src/: main.cpp
tests/src/base/: tests.cpp
tests/src/runtime-eigen/: tests.cpp
tests/src/validator-c++/: tests.cpp
validator-haskell/: .gitignore  README.md  Setup.hs  build.sh  configure  detect_ghc_buildinfo.py  package.yaml  stack.yaml  validator-haskell.cabal
validator-haskell/csrc/: DPValidatorWrapper.c
validator-haskell/src/: Validator.hs  module_init.c
validator-haskell/test/: test.py
validator-rust/: .gitignore  Cargo.toml  README.md  api.h  build.rs
validator-rust/prototypes/: api.proto  base.proto  value.proto
validator-rust/prototypes/components/: Abs.json  Add.json  And.json  Bin.json_x  Cast.json  Clamp.json  Clustering.json  ColumnBind.json  Count.json  Covariance.json  DPCategories.json  DPCount.json  DPCovariance.json  DPGumbelMedian.json  DPHistogram.json  DPLinearRegression.json  DPMaximum.json  DPMean.json  DPMedian.json  DPMinimum.json  DPMomentRaw.json  DPQuantile.json  DPRawMoment.json  DPSGD.json  DPSum.json  DPVariance.json  Dataframe.json  Digitize.json  Divide.json  Equal.json  ExponentialMechanism.json  ExponentialMechanism.json_x  Filter.json  GaussianMechanism.json  GreaterThan.json  Histogram.json  Impute.json  Index.json  Join.json  KthRawSampleMoment.json  (+42 more)
validator-rust/src/: base.rs  bindings.rs  components.rs  ffi.rs  lib.rs
validator-rust/src/components/: README.md  bin.rs  cast.rs  clamp.rs  clustering.rs  column_bind.rs  constant.rs  count.rs  covariance.rs  dataframe.rs  datasource.rs  digitize.rs  dp_count.rs  dp_covariance.rs  dp_gumbel_median.rs  dp_histogram.rs  dp_linear_regression.rs  dp_maximum.rs  dp_mean.rs  dp_median.rs  dp_minimum.rs  dp_moment_raw.rs  dp_quantile.rs  dp_raw_moment.rs  dp_sum.rs  dp_variance.rs  exponential_mechanism.rs  filter.rs  gaussian_mechanism.rs  histogram.rs  impute.rs  index.rs  join.rs  kth_raw_sample_moment.rs  laplace_mechanism.rs  literal.rs  map.rs  materialize.rs  maximum.rs  mean.rs  (+28 more)
validator-rust/src/docs/: components.rs  mod.rs
validator-rust/src/utilities/: array.rs  buffer.rs  constraint.rs  graph.rs  json.rs  (+5 more)
(+21850 files in other folders)
