[metadata]
name = whitenoise
version = 0.1.0
author = Consequences of Data
author-email = shoeboxam@gmail.com
home-page = https://github.com/opendifferentialprivacy/whitenoise-core
description = a pluggable library of differentially private algorithms and mechanisms for releasing privacy preserving queries and statistics
long-description = file: README.rst, CHANGELOG.rst
platform = any
keywords = differential-privacy
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false              # unzip package upon install
include_package_data = true
python_requires = >= 3.3
packages = whitenoise
test_suite = tests
setup_requires = 
    milksnake
install_requires = 
    protobuf
    numpy
    milksnake

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
