[metadata]
name = opendp-whitenoise-core
version = 0.1.0
author = Consequences of Data
author-email = shoeboxam@gmail.com
home-page = https://github.com/opendifferentialprivacy/whitenoise-core
description = a pluggable library of differentially private algorithms and mechanisms for releasing privacy preserving queries and statistics
long-description = file: README.md
platform = any
keywords = differential-privacy
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
zip_safe = false              # unzip package upon install
include_package_data = true
python_requires = >= 3.6
test_suite = tests
setup_requires = 
    milksnake
install_requires = 
    protobuf
    numpy
    milksnake

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
