[package]
name = "whitenoise_ffi"
version = "0.1.0"
authors = ["Consequences of Data <shoematem@seas.harvard.edu>"]
description = "A wrapper library for interfacing with the Whitenoise over ffi."
readme = "README.md"
keywords = ["differential privacy", "data privacy"]
categories = ["cryptography", "science"] # up to 5 allowed, must match those listed at https://crates.io/category_slugs
repository = "https://github.com/opendifferentialprivacy/whitenoise-core"
edition = "2018"
license = "MIT"

[dependencies]
prost = "0.5.0"
ffi-support = "0.3.5"

    [dependencies.whitenoise_validator]
    path = "../validator-rust/"
    version = "0.1.0"

    [dependencies.whitenoise_runtime]
    path = "../runtime-rust/"
    version = "0.1.0"
    optional = true
    default-features = false

[features]
# by default, include runtime with secure noise
default = ["use-runtime", "use-secure-noise"]

# runtime is dependent on the whitenoise_runtime crate
use-runtime = ["whitenoise_runtime"]
# re-export use-secure-noise from whitenoise_runtime (feature is dependent on use-runtime)
use-secure-noise = ["use-runtime", "whitenoise_runtime/use-secure-noise"]
# re-export use-system-libs from whitenoise_runtime (feature is dependent on use-runtime and use-secure-noise)
use-system-libs = ["use-runtime", "use-secure-noise", "whitenoise_runtime/use-system-libs"]

[lib]
name = "whitenoise_ffi"
crate-type = ["rlib", "cdylib", "staticlib"]
