[package]
name = "whitenoise_runtime"
version = "0.1.1"
authors = ["OpenDP-WhiteNoise <whitenoise@opendp.io>"]
description = "A library of algorithms for differentially private data analysis."
readme = "README.md"
keywords = ["differential-privacy", "data-privacy", "privacy"]
categories = ["cryptography", "science"] # up to 5 allowed, must match those listed at https://crates.io/category_slugs
repository = "https://github.com/opendifferentialprivacy/whitenoise-core"
edition = "2018"
license = "MIT"

[dependencies]
prost = "0.5.0"
bytes = "0.4.12"
libc = "0.2"
byteorder = "1.3.2"
probability = "0.17.0"
openssl = { version = "0.10.25", features = ["vendored"] }
num = "0.2.1"
indexmap = "1.3.2"
csv = "1.1.1"
ndarray = "0.13.0"
ndarray-stats = "0.3.0"
ffi-support = "0.3.5"
ieee754 = "0.2"
rug = {version = "1.8.0", default-features = false, features = ["integer", "float", "rand"]}
rand = "0.7.3"
gmp-mpfr-sys = {version="1.2.2", default-features = false, features = ["mpfr"]}
whitenoise_validator = {path = "../validator-rust/", version = "0.1.0"}
itertools = "0.8.2"
error-chain = "0.12.2"
noisy_float = "0.1.12"
libmath = "0.2.1"

[features]
# re-export use-system-libs from mpfr
use-system-libs = ["gmp-mpfr-sys/use-system-libs"]

[lib]
name = "whitenoise_runtime"
crate-type = ["rlib", "cdylib", "staticlib"]
