[package]
name = "whitenoise_runtime"
version = "0.1.3"
authors = ["OpenDP-WhiteNoise <whitenoise@opendp.io>"]
description = "A library of algorithms for differentially private data analysis."
readme = "README.md"
keywords = ["differential-privacy", "data-privacy", "privacy"]
categories = ["cryptography", "science"] # up to 5 allowed, must match those listed at https://crates.io/category_slugs
repository = "https://github.com/opendifferentialprivacy/whitenoise-core"
edition = "2018"
license = "MIT"

[dependencies]
prost = "0.5.0"
probability = "0.17.0"
num = "0.2.1"
indexmap = "1.3.2"
csv = "1.1.1"
ndarray = "0.13.0"
ndarray-stats = "0.3.0"
ieee754 = "0.2"
itertools = "0.8.2"
error-chain = "0.12.2"
noisy_float = "0.1.12"

    [dependencies.openssl]
    version = "0.10.29"
    features = ["vendored"]

    [dependencies.rug]
    version = "1.8.0"
    default-features = false
    features = ["integer", "float", "rand"]
    optional = true

    [dependencies.gmp-mpfr-sys]
    version = "1.2.2"
    default-features = false
    features = ["mpfr"]
    optional = true

    [dependencies.whitenoise_validator]
        version = "0.1.3"
    path = "../validator-rust/"

[features]
default = ["use-secure-noise"]
# re-export use-system-libs from mpfr
use-secure-noise = ["gmp-mpfr-sys", "rug"]
use-system-libs = ["use-secure-noise", "gmp-mpfr-sys/use-system-libs"]

[lib]
name = "whitenoise_runtime"
crate-type = ["rlib"]
