[package]
name = "smartnoise_runtime"
version = "0.2.1"
authors = ["OpenDP-SmartNoise <smartnoise@opendp.io>"]
description = "A library of algorithms for differentially private data analysis."
readme = "README.md"
keywords = ["differential-privacy", "data-privacy", "privacy"]
categories = ["cryptography", "science"] # up to 5 allowed, must match those listed at https://crates.io/category_slugs
repository = "https://github.com/opendifferentialprivacy/smartnoise-core"
edition = "2018"
license = "MIT"

[dependencies]
probability = "0.17.0"
num = "0.3.0"
indexmap = "1.4.0"
csv = "1.1.3"
ndarray = "0.13.1"
ndarray-stats = "0.3.0"
ieee754 = "0.2.6"
itertools = "0.9.0"
error-chain = "0.12.2"
noisy_float = "0.1.12"
statrs = "0.12.0"

    [dependencies.openssl]
    version = "0.10.29"
    features = ["vendored"]

    [dependencies.rug]
    version = "1.9.0"
    default-features = false
    features = ["integer", "float", "rand"]
    optional = true

    [dependencies.gmp-mpfr-sys]
    version = "=1.3.1"
    default-features = false
    features = ["mpfr"]
    optional = true

    [dependencies.smartnoise_validator]
            version = "0.2.1"
    path = "../validator-rust/"

[features]
default = ["use-mpfr"]
# re-export use-system-libs from mpfr
use-mpfr = ["gmp-mpfr-sys", "rug"]
use-system-libs = ["use-mpfr", "gmp-mpfr-sys/use-system-libs"]

[lib]
name = "smartnoise_runtime"
crate-type = ["rlib"]
