name:                validator-haskell
version:             0.1.0
-- synopsis:
-- description:
-- copyright:           
-- category:
build-type: Configure
cabal-version:          >=1.10
extra-source-files:
    configure
    detect-ghc-buildinfo.py
    ../prototypes/**/*.proto
extra-tmp-files:        validator-haskell.buildinfo
custom-setup
  setup-depends:        base, Cabal, proto-lens-setup


library
  default-language: Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Validator
    Proto.Analysis
    Proto.Analysis_Fields
    Proto.Release
    Proto.Release_Fields
    Proto.Types
    Proto.Types_Fields
  build-depends:
    base >=4.9 && <4.10
    , proto-lens-runtime
  ghc-options:
    -Wall -fwarn-unused-imports

executable libdifferential_privacy.so
  default-language:     Haskell2010
  hs-source-dirs:       src
  main-is:              api.hs
  build-depends:
    validator-haskell
    , base
    , microlens
    , proto-lens
    , proto-lens-runtime

  ghc-options:
    -- For building TemplateHaskell with cabal and -dynamic, we have to disable -dynamic sometimes
    -no-hs-main -fPIC -shared -dynamic

  -- If we don't specify the Haskell RTS as extra-libraries, we get errors like
  -- the following when calling from some other language:
  --   /usr/lib/ghc/ghc-prim-0.3.0.0/libHSghc-prim-0.3.0.0-ghc7.6.3.so: undefined symbol: stg_forkOnzh
  --
  -- The `build-type: Configure` with the `./configure` script makes sure that
  -- an `extra-libraries: HSrts-ghc*.*.*` field is added using cabal's .buildinfo infrastructure.
  -- See http://stackoverflow.com/questions/6034526/how-can-configuration-tools-like-sdl-config-be-used-with-a-cabalized-project
  -- and https://github.com/nh2/call-haskell-from-anything/pull/2#issuecomment-68638262.
