[package]
name = "yarrow_validator"
version = "0.1.0"
authors = ["Shoeboxam <shoeboxam@gmail.com>"]
edition = "2018"

[dependencies]
prost = "0.5.0"
bytes = "0.4.12"
libc = "0.2"
byteorder = "1.3.2"
ffi-support = "0.3.5"
itertools = "0.8.2"
ndarray = "0.13.0"
ndarray-stats = "0.3.0"
derive_more = "0.99.3"
error-chain = "0.12.2"
serde_json = "1.0.48"
serde = "1.0.104"


[build-dependencies]
prost-build = { version = "0.5.0" }
cbindgen = "0.9.1"

[lib]
name = "yarrow_validator"
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = true
