[package]
name = "whitenoise_validator"
version = "0.1.1"
authors = ["OpenDP-WhiteNoise <whitenoise@opendp.io>"]
description = "A library for validating whether or not an analysis is differentially private."
readme = "README.md"
keywords = ["differential-privacy", "data-privacy", "privacy"]
categories = ["cryptography", "science"] # up to 5 allowed, must match those listed at https://crates.io/category_slugs
repository = "https://github.com/opendifferentialprivacy/whitenoise-core"
build="build/main.rs"
edition = "2018"
license = "MIT"

[dependencies]
prost = "0.5.0"
bytes = "0.4.12" # prost struct <-> ffi bytes
ffi-support = "0.3.5"
itertools = "0.8.2"
num = "0.2.1" # checked ops
indexmap = "1.3.2" # Value::Indexmap
ndarray = "0.13.0"
ndarray-stats = "0.3.0"
error-chain = "0.12.2"
serde_json = "1.0.48"
serde = "1.0.104"
noisy_float = "0.1.12"
statrs = "0.12.0" # for erf

[build-dependencies]
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
itertools = "0.8.2"
heck = "0.3.1"
prost-build = { version = "0.5.0" }
build-deps = "0.1.4"

[lib]
name = "whitenoise_validator"
crate-type = ["rlib", "cdylib", "staticlib"]
