[package]
name = "smartnoise_validator"
version = "0.2.2"
authors = ["OpenDP-SmartNoise <smartnoise@opendp.io>"]
description = "A library for validating whether or not an analysis is differentially private."
readme = "README.md"
keywords = ["differential-privacy", "data-privacy", "privacy"]
categories = ["cryptography", "science"] # up to 5 allowed, must match those listed at https://crates.io/category_slugs
repository = "https://github.com/opendifferentialprivacy/smartnoise-core"
build = "build/main.rs"
edition = "2018"
license = "MIT"

[dependencies]
prost = "0.6.1"
bytes = "0.5.4"
itertools = "0.9.0"
num = "0.3.0"
indexmap = "1.4.0"
ndarray = "0.13.1"
ndarray-stats = "0.3.0"
error-chain = "0.12.2"
serde_json = "1.0.55"
serde = "1.0.112"
noisy_float = "0.1.12"
statrs = "0.12.0"
ieee754 = "0.2.6"

[build-dependencies]
serde_json = "1.0.55"
serde = { version = "1.0.112", features = ["derive"] }
itertools = "0.9.0"
heck = "0.3.1"
prost-build = "0.6.1"
build-deps = "0.1.4"
indexmap = { version = "1.4.0", features = ["serde-1"] }

[lib]
name = "smartnoise_validator"
crate-type = ["rlib"]
